Lexical and Sintactic Analysis with JavaCC/prueba/Analizador.java
/* Analizador.java */
/* Generated By:JavaCC: Do not edit this line. Analizador.java */
import java.io.*;

public class Analizador implements AnalizadorConstants {

    // Contador para generar etiquetas únicas
    int labelCount = 0;

    /**
     * Genera una nueva etiqueta única (ej. "LBL0", "LBL1").
     */
    String nuevaEtiqueta() {
        return "LBL" + labelCount++;
    }

    /**
     * Imprime una instrucción de código de pila con sangría.
     */
    void gen(String instruccion) {
        System.out.println("\t" + instruccion);
    }

    /**
     * Método principal para ejecutar el analizador.
     * Lee de un fichero si se pasa como argumento, o de la entrada estándar si no.
     */
    public static void main(String[] args) throws ParseException, FileNotFoundException {
        Analizador parser;
        if (args.length == 0) {
            System.out.println("Leyendo de la entrada estandar... (Presiona Ctrl+D o Ctrl+Z para finalizar)");
            parser = new Analizador(System.in);
        } else {
            System.out.println("Leyendo del fichero: " + args[0]);
            parser = new Analizador(new FileInputStream(args[0]));
        }

        try {
            parser.Programa();
            System.out.println("\nAnalisis completado con exito.");
        } catch (Exception e) {
            System.err.println("\nError durante el analisis: " + e.getMessage());
            e.printStackTrace();
        } catch (Error e) {
            System.err.println("\nError fatal de analisis: " + e.getMessage());
        }
    }

/*
 * --- SECCIÓN DE LA GRAMÁTICA (PRODUCCIONES) ---
 */

/**
 * Producción inicial. Un programa es una lista de sentencias
 * separadas por punto y coma, seguida del fin de fichero.
 */
  final public void Programa() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPRIMIR:
      case SI:
      case MIENTRAS:
      case HACER:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      sntnc();
      jj_consume_token(SEMICOLON);
    }
    jj_consume_token(0);
}

/**
 * Una sentencia puede ser una selección, iteración, asignación o impresión.
 */
  final public void sntnc() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SI:{
      sel_stmt();
      break;
      }
    case MIENTRAS:
    case HACER:{
      iter_stmt();
      break;
      }
    case ID:{
      assig_stmt();
      break;
      }
    case IMPRIMIR:{
      print_stmt();
      break;
      }
    default:
      jj_la1[1] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/**
 * Sentencia de impresión: 'imprimir' '(' expr ')'
 */
  final public void print_stmt() throws ParseException {
    jj_consume_token(IMPRIMIR);
    jj_consume_token(LPAREN);
    expr();
    jj_consume_token(RPAREN);
gen("print");
}

/**
 * Sentencia de selección (if-then o if-then-else).
 * 'si' '(' expr ')' '{' list_sntncs '}'
 * [ 'sino' '{' list_sntncs '}' ]
 */
  final public void sel_stmt() throws ParseException {String etqSino, etqSalida;
    jj_consume_token(SI);
    jj_consume_token(LPAREN);
    expr();
    jj_consume_token(RPAREN);
etqSino = nuevaEtiqueta();
    etqSalida = etqSino; // Por defecto, la salida es la etiqueta 'sino'
    gen("sifalsovea " + etqSino);
    jj_consume_token(LBRACE);
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case IMPRIMIR:
      case SI:
      case MIENTRAS:
      case HACER:
      case ID:{
        ;
        break;
        }
      default:
        jj_la1[2] = jj_gen;
        break label_2;
      }
      sntnc();
      jj_consume_token(SEMICOLON);
    }
    jj_consume_token(RBRACE);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case SINO:{
      jj_consume_token(SINO);
etqSalida = nuevaEtiqueta(); // Hay 'sino', la salida es una nueva etiqueta
      gen("vea " + etqSalida); // Salta el bloque 'sino'
      gen(etqSino);           // Etiqueta para el bloque 'sino'

      jj_consume_token(LBRACE);
      label_3:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IMPRIMIR:
        case SI:
        case MIENTRAS:
        case HACER:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[3] = jj_gen;
          break label_3;
        }
        sntnc();
        jj_consume_token(SEMICOLON);
      }
      jj_consume_token(RBRACE);
      break;
      }
    default:
      jj_la1[4] = jj_gen;
      ;
    }
gen(etqSalida); // Genera la etiqueta de salida (sea 'etqSino' o 'etqSalida')

}

/**
 * Sentencia de iteración (while o do-while).
 */
  final public void iter_stmt() throws ParseException {String etqComienzo, etqSalida;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case MIENTRAS:{
      jj_consume_token(MIENTRAS);
etqComienzo = nuevaEtiqueta();
    etqSalida = nuevaEtiqueta();
    gen(etqComienzo); // Etiqueta de inicio de bucle (para re-evaluar)

      jj_consume_token(LPAREN);
      expr();
      jj_consume_token(RPAREN);
gen("sifalsovea " + etqSalida); // Si es falso, sal del bucle

      jj_consume_token(LBRACE);
      label_4:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IMPRIMIR:
        case SI:
        case MIENTRAS:
        case HACER:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[5] = jj_gen;
          break label_4;
        }
        sntnc();
        jj_consume_token(SEMICOLON);
      }
      jj_consume_token(RBRACE);
gen("vea " + etqComienzo); // Vuelve al inicio
    gen(etqSalida);          // Etiqueta de salida

      break;
      }
    case HACER:{
      jj_consume_token(HACER);
etqComienzo = nuevaEtiqueta();
    gen(etqComienzo); // Etiqueta de inicio del cuerpo

      jj_consume_token(LBRACE);
      label_5:
      while (true) {
        switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
        case IMPRIMIR:
        case SI:
        case MIENTRAS:
        case HACER:
        case ID:{
          ;
          break;
          }
        default:
          jj_la1[6] = jj_gen;
          break label_5;
        }
        sntnc();
        jj_consume_token(SEMICOLON);
      }
      jj_consume_token(RBRACE);
      jj_consume_token(MIENTRAS);
      jj_consume_token(LPAREN);
      expr();
      jj_consume_token(RPAREN);
gen("siciertovea " + etqComienzo); // Si es cierto, repite

      break;
      }
    default:
      jj_la1[7] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

/**
 * Sentencia de asignación: ID (= | += | -= | *= | /=) expr
 */
  final public void assig_stmt() throws ParseException {Token t;
    t = jj_consume_token(ID);
// Siempre empezamos cargando la *dirección* (valori)
    gen("valori " + t.image);
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case ASSIGN:{
      jj_consume_token(ASSIGN);
      expr();
      break;
      }
    case PLUSASSIGN:{
      jj_consume_token(PLUSASSIGN);
gen("valord " + t.image);
      expr();
gen("sum");
      break;
      }
    case MINUSASSIGN:{
      jj_consume_token(MINUSASSIGN);
gen("valord " + t.image);
      expr();
gen("sub");
      break;
      }
    case MULASSIGN:{
      jj_consume_token(MULASSIGN);
gen("valord " + t.image);
      expr();
gen("mul");
      break;
      }
    case DIVASSIGN:{
      jj_consume_token(DIVASSIGN);
gen("valord " + t.image);
      expr();
gen("div");
      break;
      }
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
// El valor resultante está en la pila, 'valori' ya puso la dirección.
    // Asignamos el valor a la dirección.
    gen("asigna");
}

/**
 * Expresión (aditiva).
 * expr -> mult_expr ( ( '+' | '-' ) mult_expr )*
 */
  final public void expr() throws ParseException {
    mult_expr();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:
      case MINUS:{
        ;
        break;
        }
      default:
        jj_la1[9] = jj_gen;
        break label_6;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case PLUS:{
        jj_consume_token(PLUS);
        mult_expr();
gen("sum");
        break;
        }
      case MINUS:{
        jj_consume_token(MINUS);
        mult_expr();
gen("sub");
        break;
        }
      default:
        jj_la1[10] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

/**
 * Expresión (multiplicativa).
 * mult_expr -> val ( ( '*' | '/' ) val )*
 */
  final public void mult_expr() throws ParseException {
    val();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:
      case DIV:{
        ;
        break;
        }
      default:
        jj_la1[11] = jj_gen;
        break label_7;
      }
      switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
      case MUL:{
        jj_consume_token(MUL);
        val();
gen("mul");
        break;
        }
      case DIV:{
        jj_consume_token(DIV);
        val();
gen("div");
        break;
        }
      default:
        jj_la1[12] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
    }
}

/**
 * Valor (unidad básica de una expresión).
 * val -> NUM | ID | '(' expr ')'
 */
  final public void val() throws ParseException {Token t;
    switch ((jj_ntk==-1)?jj_ntk_f():jj_ntk) {
    case NUM:{
      // Caso: Un número
        t = jj_consume_token(NUM);
gen("mete " + t.image); // Carga un valor literal

      break;
      }
    case ID:{
      // Caso: Un identificador
        t = jj_consume_token(ID);
gen("valord " + t.image); // Carga el valor de una variable

      break;
      }
    case LPAREN:{
      jj_consume_token(LPAREN);
      expr();
      jj_consume_token(RPAREN);
      break;
      }
    default:
      jj_la1[13] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
}

  /** Generated Token Manager. */
  public AnalizadorTokenManager token_source;
  SimpleCharStream jj_input_stream;
  /** Current token. */
  public Token token;
  /** Next token. */
  public Token jj_nt;
  private int jj_ntk;
  private int jj_gen;
  final private int[] jj_la1 = new int[14];
  static private int[] jj_la1_0;
  static {
	   jj_la1_init_0();
	}
	private static void jj_la1_init_0() {
	   jj_la1_0 = new int[] {0x10001b00,0x10001b00,0x10001b00,0x10001b00,0x400,0x10001b00,0x10001b00,0x1800,0x3e000,0xc0000,0xc0000,0x300000,0x300000,0x18400000,};
	}

  /** Constructor with InputStream. */
  public Analizador(java.io.InputStream stream) {
	  this(stream, null);
  }
  /** Constructor with InputStream and supplied encoding */
  public Analizador(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream = new SimpleCharStream(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source = new AnalizadorTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream) {
	  ReInit(stream, null);
  }
  /** Reinitialise. */
  public void ReInit(java.io.InputStream stream, String encoding) {
	 try { jj_input_stream.ReInit(stream, encoding, 1, 1); } catch(java.io.UnsupportedEncodingException e) { throw new RuntimeException(e); }
	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor. */
  public Analizador(java.io.Reader stream) {
	 jj_input_stream = new SimpleCharStream(stream, 1, 1);
	 token_source = new AnalizadorTokenManager(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(java.io.Reader stream) {
	if (jj_input_stream == null) {
	   jj_input_stream = new SimpleCharStream(stream, 1, 1);
	} else {
	   jj_input_stream.ReInit(stream, 1, 1);
	}
	if (token_source == null) {
 token_source = new AnalizadorTokenManager(jj_input_stream);
	}

	 token_source.ReInit(jj_input_stream);
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Constructor with generated Token Manager. */
  public Analizador(AnalizadorTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  /** Reinitialise. */
  public void ReInit(AnalizadorTokenManager tm) {
	 token_source = tm;
	 token = new Token();
	 jj_ntk = -1;
	 jj_gen = 0;
	 for (int i = 0; i < 14; i++) jj_la1[i] = -1;
  }

  private Token jj_consume_token(int kind) throws ParseException {
	 Token oldToken;
	 if ((oldToken = token).next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 if (token.kind == kind) {
	   jj_gen++;
	   return token;
	 }
	 token = oldToken;
	 jj_kind = kind;
	 throw generateParseException();
  }


/** Get the next Token. */
  final public Token getNextToken() {
	 if (token.next != null) token = token.next;
	 else token = token.next = token_source.getNextToken();
	 jj_ntk = -1;
	 jj_gen++;
	 return token;
  }

/** Get the specific Token. */
  final public Token getToken(int index) {
	 Token t = token;
	 for (int i = 0; i < index; i++) {
	   if (t.next != null) t = t.next;
	   else t = t.next = token_source.getNextToken();
	 }
	 return t;
  }

  private int jj_ntk_f() {
	 if ((jj_nt=token.next) == null)
	   return (jj_ntk = (token.next=token_source.getNextToken()).kind);
	 else
	   return (jj_ntk = jj_nt.kind);
  }

  private java.util.List<int[]> jj_expentries = new java.util.ArrayList<int[]>();
  private int[] jj_expentry;
  private int jj_kind = -1;

  /** Generate ParseException. */
  public ParseException generateParseException() {
	 jj_expentries.clear();
	 boolean[] la1tokens = new boolean[29];
	 if (jj_kind >= 0) {
	   la1tokens[jj_kind] = true;
	   jj_kind = -1;
	 }
	 for (int i = 0; i < 14; i++) {
	   if (jj_la1[i] == jj_gen) {
		 for (int j = 0; j < 32; j++) {
		   if ((jj_la1_0[i] & (1<<j)) != 0) {
			 la1tokens[j] = true;
		   }
		 }
	   }
	 }
	 for (int i = 0; i < 29; i++) {
	   if (la1tokens[i]) {
		 jj_expentry = new int[1];
		 jj_expentry[0] = i;
		 jj_expentries.add(jj_expentry);
	   }
	 }
	 int[][] exptokseq = new int[jj_expentries.size()][];
	 for (int i = 0; i < jj_expentries.size(); i++) {
	   exptokseq[i] = jj_expentries.get(i);
	 }
	 return new ParseException(token, exptokseq, tokenImage);
  }

  private boolean trace_enabled;

/** Trace enabled. */
  final public boolean trace_enabled() {
	 return trace_enabled;
  }

  /** Enable tracing. */
  final public void enable_tracing() {
  }

  /** Disable tracing. */
  final public void disable_tracing() {
  }

}
